# MBforge

./: .dockerignore  .editorconfig  .env.example  .env.template  .env.uv  .gitignore  AGENTS.md  AGENTS.md.bak  ARCHITECTURE.html  ARCHITECTURE.md  AUDIT.md  Analysis.md  CHANGELOG.md  CLAUDE.md  CODEMAP.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MBForge.spec  PDF_FRONTEND_API.md  README.md  README.md.bak  REFERENCES.md  TAURI_BUILD.md  TODO.md  _test_patent.py  build.py  cargo_check_errors.txt  constants.yaml  fix_reexports.py  mbforge-bridge.xpi  package-lock.json  parse_pdf.py  pyproject.toml  reasonix.toml  repl-1.txt  repl-2.txt  repl-3.txt  review_diff.txt  (+9 more)
src-tauri/: Cargo.toml  build.bat  build.rs  build.sh  tauri.conf.json  test-quick.ps1
src-tauri/benches/: vector_search.rs
src-tauri/capabilities/: default.json
src-tauri/crates/mbforge-app/: Cargo.toml  tauri.conf.json
src-tauri/crates/mbforge-app/capabilities/: default.json
src-tauri/crates/mbforge-app/examples/: okf_run.rs
src-tauri/crates/mbforge-app/permissions/: allow-app-commands.toml
src-tauri/crates/mbforge-app/src/: lib.rs  main.rs  sidecar.rs
src-tauri/crates/mbforge-chem/: Cargo.toml
src-tauri/crates/mbforge-chem/src/: abbreviation_map.rs  esmiles.rs  gesim.rs  lib.rs  markush.rs  molecode.rs  preprocess.rs  sar.rs  smiles.rs
src-tauri/crates/mbforge-domain/: Cargo.toml
src-tauri/crates/mbforge-domain/src/: ingest_queue.rs  lib.rs
src-tauri/crates/mbforge-domain/tests/: zvec_sidecar_integration.rs
src-tauri/crates/mbforge-infra/: Cargo.toml  build.rs
src-tauri/crates/mbforge-infra/src/: db.rs  error.rs  helpers.rs  http.rs  lib.rs  sidecar_client.rs  trace.rs  types.rs
src-tauri/crates/mbforge-pipeline/: Cargo.toml
src-tauri/crates/mbforge-pipeline/src/: doc_types.rs  keywords.rs  lib.rs
src-tauri/crates/mbforge-pipeline/tests/: pipeline_v2.rs
src-tauri/crates/zvec-bindings/: Cargo.toml
src-tauri/crates/zvec-bindings/src/: lib.rs
src-tauri/docs/esmiles/: esmiles-mbforge.md  esmiles-spec.md
src-tauri/docs/liteparse/: liteparse-api-ref.md  liteparse-api.md  liteparse-getting-started.md  liteparse-library-usage.md
src-tauri/icons/: README.md  icon.icns
src-tauri/permissions/: allow-agent-get-history.toml  allow-agent.toml  allow-app-commands.toml  allow-audit-log-get.toml  allow-augment-markdown-with-images.toml  allow-cached-extract-page.toml  allow-classifier.toml  allow-classify-pdf.toml  allow-clear-detection-cache.toml  allow-extract-text.toml  allow-extractor.toml  allow-file-ops.toml  allow-gesim-similarity.toml  allow-get-detection-cache-stats.toml  allow-get-document-ocr-layout.toml  allow-ingest-cancel-all-pending.toml  allow-ingest-cancel.toml  allow-ingest-cleanup.toml  allow-ingest-dequeue.toml  allow-ingest-enqueue.toml  allow-ingest-list.toml  allow-ingest-mark-done.toml  allow-ingest-mark-failed.toml  allow-ingest-stats.toml  allow-knowledge-base.toml  allow-label-for-mol-bbox.toml  allow-llm.toml  allow-mol-store.toml  allow-molecule-store.toml  allow-molecule.toml  allow-notes.toml  allow-open-file.toml  allow-open-project.toml  allow-pipeline.toml  allow-project-ops.toml  allow-resource-manager.toml  allow-settings.toml  allow-sidecar.toml  allow-text-ops.toml  allow-vlm-chem-coref.toml
src-tauri/src/: lib.rs  main.rs  protocol.rs  sidecar.rs
src-tauri/src/commands/: agent.rs  chem_ops.rs  classifier.rs  detection_cache.rs  extractor.rs  file_ops.rs  gesim.rs  llm.rs  mod.rs  mol_engine.rs  mol_store.rs  molecode.rs  molecule.rs  molecule_admin.rs  molecule_engine.rs  molecule_store.rs  notes.rs  pdf.rs  pipeline.rs  pipeline_v2.rs  project_ops.rs  result_pane.rs  settings.rs  settings_extra.rs  sidecar.rs  text_ops.rs
src-tauri/src/core/: agent.rs  arxiv.rs  chem.rs  config.rs  constants.rs  context.rs  db.rs  document_tree.rs  embedding.rs  error.rs  executor.rs  helpers.rs  knowledge_base.rs  lance_store.rs  llm.rs  markush.rs  memory.rs  mod.rs  molecule_cluster.rs  molecule_db.rs  molecule_dedup.rs  molecule_engine.rs  molecule_store.rs  notes.rs  observability.rs  pending.rs  project.rs  project_migrator.rs  resource_manager.rs  sar_query.rs  semantic_cache.rs  sidecar_client.rs  skills.rs  specialist_agent.rs  sqlite_vector_store.rs  stream_search.rs  tools.rs  trace.rs  trajectory.rs  types.rs  (+1 more)
src-tauri/src/core/agent/: agent.rs  arxiv.rs  arxiv_rig.rs  compactor.rs  context.rs  conversation_store.rs  demotion.rs  document.rs  executor.rs  executor_rig.rs  fs.rs  kb.rs  literature.rs  llm.rs  llm_client.rs  llm_gateway.rs  managed_memory.rs  memory.rs  mod.rs  molecule.rs  observability.rs  rig_adapter.rs  rig_hooks.rs  rig_memory.rs  session_id.rs  skills.rs  specialist_agent.rs  tools.rs  trajectory.rs
src-tauri/src/core/chem/: abbreviation_map.rs  chem.rs  chem_facade.rs  esmiles.rs  gesim.rs  markush.rs  mod.rs  molecode.rs  preprocess.rs  sar.rs  sar_query.rs
src-tauri/src/core/config/: constants.rs  mod.rs  settings.rs
src-tauri/src/core/db/: connection.rs  migration.rs  mod.rs  query.rs  table.rs
src-tauri/src/core/document/: content_cache.rs  detection_cache.rs  document_tree.rs  file_cache.rs  ingest_queue.rs  ingest_worker.rs  knowledge_base.rs  lit_review.rs  mod.rs  pdf_facade.rs  semantic_cache.rs  summary.rs
src-tauri/src/core/executor/: arxiv.rs  document.rs  fs.rs  kb.rs  literature.rs  mod.rs  molecule.rs
src-tauri/src/core/memory/: memory.rs  mod.rs  pending.rs  skills.rs  trajectory.rs
src-tauri/src/core/models/: catalog.rs  download.rs  mod.rs  resolve.rs  status.rs
src-tauri/src/core/molecule/: mod.rs  molecule_cluster.rs  (+5 more)
src-tauri/src/parsers/: association.rs  chem_validate.rs  claim_parser.rs  claim_policy.rs  doc_types.rs  headings.rs  images.rs  intent.rs  keywords.rs  liteparse.rs  llama_parse.rs  mineru.rs  mod.rs  molecule_extractor.rs  pipeline.rs  post_process.rs  report.rs  sections.rs  summary.rs  types.rs  uniparser.rs  vlm_chem.rs
src-tauri/tests/: pipeline_v2.rs  test_agent_chat.rs  test_e2e_real_pdf.rs  test_full_pipeline.rs  test_pipeline_integration.rs
(+1454 files in other folders)
