[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["src"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
override-dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# PyTorch 三件套：声明在 dependencies 中，此处将安装源覆盖为 pytorch-cu128 索引
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[project]
name = "mbforge"
version = "0.1.0"
description = "MBForge - Molecular Knowledge Base & AI Workbench"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MBForge Team" }
]

# 统一依赖
dependencies = [
    # 现有子包依赖
    "requests>=2.32.0",
    "pandas>=2.3.3,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pillow>=10.4.0",
    "markdown>=3.6",
    "pymupdf>=1.25.0",
    "opencv-python>=4.10.0",
    "rdkit>=2024.3.0",
    "matplotlib>=3.7.0",
    # CSAR (SAR 分析工具箱，合并自 openSAR)
    "openbabel-wheel>=3.1.1",
    # AI / RAG
    "chromadb>=0.4.0",
    "sentence-transformers>=2.5.0",
    "transformers>=4.51.0",
    "accelerate>=0.30.0",
    "openai>=1.0.0",
    # PyTorch (CUDA 12.8) — 必须在 dependencies 中声明，
    # sources 只负责将它们的安装源从清华镜像替换为 pytorch-cu128
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=0.21.0",
    # Utils
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.103.1",
    # Model Server (FastAPI)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    # Molecular image detection & recognition pipeline
    "ultralytics>=8.3.0",
    "pdfplumber>=0.11.0",
    "onnxruntime>=1.26.0",
    "python-multipart>=0.0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
mbforge = "mbforge.cli:main"
csar = "mbforge.csar_main:main"

[tool.setuptools.packages.find]
where = ["src"]
