[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["src"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
override-dependencies = [
    "numpy>=1.26.4,<2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[project]
name = "mbforge"
version = "0.2.0"
description = "MBForge - Molecular Knowledge Base & AI Workbench"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MBForge Team" }
]

# 统一依赖
dependencies = [
    # 现有子包依赖
    "requests>=2.32.0",
    "numpy>=1.26.4,<2.0.0",
    "pillow>=10.4.0",
    "rdkit>=2024.3.0",
    # AI / RAG
    "chromadb>=0.4.0",
    "sentence-transformers>=2.5.0",
    "transformers>=4.51.0",
    "openai>=1.0.0",
    # PyTorch (CUDA 12.8)
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=0.21.0",
    # Utils
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.103.1",
    # Model Server (FastAPI)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    # Molecular image detection & recognition pipeline
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "matplotlib>=3.7.0",
    "onnxruntime>=1.26.0",
    "python-multipart>=0.0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mbforge = "mbforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ============================================================================
# Ruff: Python linter & formatter
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

