[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["src"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
prerelease = "allow"
override-dependencies = [
    "numpy>=1.26.4,<2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
# MolScribe 需要特定版本的 timm，不能用 PyPI 最新版
timm = { git = "https://github.com/rwightman/pytorch-image-models.git", rev = "54a6cca27a9a3e092a07457f5d56709da56e3cf5" }

[project]
name = "mbforge"
version = "0.3.0"
description = "MBForge - Molecular Knowledge Base & AI Workbench"
requires-python = ">=3.12,<3.13"
scripts = { mbforge = "start:main" }
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
authors = [
    { name = "MBForge Team" }
]

# 统一依赖
dependencies = [
    # 现有子包依赖
    "requests>=2.32.0",
    # Native GUI (Dear PyGui for desktop mode)
    "dearpygui>=2.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pillow>=10.4.0",
    "rdkit>=2024.3.0",
    # AI / RAG
    "transformers>=4.55.0",
    # PyTorch (CUDA 12.8)
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=0.21.0",
    # Utils
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.2.0",
    "pydantic-settings>=2.2.0",
    # Agent framework
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.4.0",
    # Document parsing
    "pdfplumber>=0.11.0",
    # SSE streaming
    "sse-starlette>=2.0.0",
    # Model Server (FastAPI)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    # PDF rendering (PyMuPDF page images for MoldDet)
    "pymupdf>=1.27.0",
    # Molecular image detection & recognition pipeline
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "matplotlib>=3.7.0",
    "python-multipart>=0.0.29",
    # MolScribe dependencies (timm 版本通过 uv.sources 锁定)
    "timm",
    "OpenNMT-py==2.2.0",
    "pycocotools>=2.0.11",
    # OCR (MolDetect coref identifier recognition, ONNX runtime — Windows CUDA 12 兼容)
    "rapidocr==3.9.0",
    "pandas>=2.2.0",
    "onnxruntime-directml>=1.24.4",
    # Vector search — removed (replaced by OpenKB + PageIndex)
    # "zvec>=0.5.1",
    "pypdfium2",
    "modelscope>=1.37.1",
    # OpenKB + PageIndex (wiki compilation + vectorless tree indexing)
    "openkb>=0.4.0",
    "pageindex>=0.3.0.dev1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "cairosvg>=2.9.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# ============================================================================
# Ruff: Python linter & formatter
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

