[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/mbforge-app"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["MBForge Team"]
license = "CC-BY-NC-SA-4.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
log = "0.4"
anyhow = "1"
thiserror = "1"
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
tempfile = "3"
directories = "5"
tauri = { version = "2", default-features = false }
chematic-core = { git = "https://github.com/kent-tokyo/chematic", rev = "2702636" }
chematic-smiles = { git = "https://github.com/kent-tokyo/chematic", rev = "2702636" }
chematic-fp = { git = "https://github.com/kent-tokyo/chematic", rev = "2702636" }
chematic-smarts = { git = "https://github.com/kent-tokyo/chematic", rev = "2702636" }
chematic-chem = { git = "https://github.com/kent-tokyo/chematic", rev = "2702636" }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
