[package]
name = "mbforge-chem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chematic-core.workspace = true
chematic-smiles.workspace = true
chematic-fp.workspace = true
chematic-smarts.workspace = true
chematic-chem.workspace = true

[lints]
workspace = true
