[package]
name = "mbforge-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mbforge-infra = { path = "../mbforge-infra" }
mbforge-chem = { path = "../mbforge-chem" }
zvec-bindings = { version = "0.4", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tokio.workspace = true
log.workspace = true
tauri = { version = "2", features = ["wry"] }
reqwest = { workspace = true, features = ["blocking"] }
chematic-smiles.workspace = true
dashmap = "6"
walkdir = "2"
sha2.workspace = true
uuid.workspace = true
regex.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
