[package]
name = "mbforge-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mbforge-infra = { path = "../mbforge-infra" }
mbforge-chem = { path = "../mbforge-chem" }
mbforge-domain = { path = "../mbforge-domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
sha2.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart", "stream", "rustls-tls"] }
tauri = { version = "2", default-features = false }
pdf-inspector = "=0.1.0"
lopdf = { git = "https://github.com/J-F-Liu/lopdf", rev = "7a05512d831415b1f2b1ce522391d6beab8a1284", version = "0.40.0" }
rig-core = { version = "0.38", features = ["derive", "reqwest", "rustls"] }
async-trait = "0.1"
base64 = "0.22"
image = "0.25"
pulldown-cmark = { version = "0.12", default-features = false }
text-splitter = { version = "0.11", default-features = false }
tempfile.workspace = true
zip = "0.6"
futures = "0.3"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
